# django-opennames

./: MANIFEST.in  README.md  geocoders.py  models.py  setup.cfg
opennames/: __init__.py  apps.py  geocoders.py  models.py  setup.cfg  utils.py
opennames/management/commands/: load_os_opennames.py  osdata.py
